# OpenCombat

./: .gitignore  .travis.yml  CREDITS  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  requirements.txt  run.py  select_troops.py  t.py  test_config.yaml
.github/workflows/: check_release.yml  checks.yml  release.yml  rustbuild.yml  test.yml
assets/: Demo1_deployment2.json  demo1_deployment.json  demo1_deployment2.json  demo2_deployment.json  demo2_deployment2.json  map1_deployment.json
assets/linux/: sidea__embedded_server.sh  sideb__client.sh
assets/w64/: sidea__embedded_server.bat  sideb__client.bat
battle_core/: Cargo.toml
battle_core/src/: channel.rs  config.rs  hardcode.rs  lib.rs  sync.rs  types.rs  utils.rs
battle_core/src/audio/: mod.rs
battle_core/src/behavior/: feeling.rs  gesture.rs  mod.rs
battle_core/src/deployment/: mod.rs
battle_core/src/entity/: mod.rs  soldier.rs  vehicle.rs
battle_core/src/game/: control.rs  cover.rs  explosive.rs  flag.rs  health.rs  mod.rs  posture.rs  squad.rs  weapon.rs
battle_core/src/graphics/: cannon_blast.rs  explosion.rs  mod.rs  soldier.rs  vehicle.rs  weapon.rs
battle_core/src/map/: decor.rs  interior.rs  mod.rs  reader.rs  spawn.rs  terrain.rs
battle_core/src/message/: mod.rs  network.rs
battle_core/src/network/: client.rs  error.rs  mod.rs  server.rs
battle_core/src/order/: marker.rs  mod.rs
battle_core/src/physics/: coverage.rs  mod.rs  path.rs  utils.rs  visibility.rs
battle_core/src/physics/event/: bullet.rs  cannon_blast.rs  explosion.rs  mod.rs
battle_core/src/state/: mod.rs
battle_core/src/state/battle/: builder.rs  message.rs  mod.rs  order.rs  phase.rs  soldier.rs  squad.rs  vehicle.rs  visibility.rs
battle_core/src/state/client/: mod.rs
battle_gui/: Cargo.toml
battle_gui/src/: debug.rs  lib.rs  main.rs  run.rs  utils.rs
battle_gui/src/audio/: player.rs
battle_gui/src/engine/: draw.rs  end.rs  event.rs  game.rs  gui.rs  hud.rs  input.rs  interior.rs  intro.rs  message.rs  mod.rs  network.rs  order.rs  react.rs  save.rs  state.rs  tick.rs  ui.rs  utils.rs
battle_gui/src/engine/debug/: mod.rs
battle_gui/src/engine/debug/gui/: body.rs  config.rs  explosives.rs  header.rs  meta.rs  mod.rs  saves.rs  soldiers.rs  state.rs  terrain.rs  textures.rs
battle_gui/src/engine/physics/: bullet.rs  canon_blast.rs  explosion.rs  mod.rs
battle_gui/src/graphics/: animation.rs  background.rs  batch.rs  cannon_blasts.rs  decors.rs  explosions.rs  flag.rs  interiors.rs  map.rs  message.rs  minimap.rs  mod.rs  order.rs  qualified.rs  soldier.rs  squad.rs  utils.rs  vehicles.rs  weapons.rs
battle_gui/src/saves/: reader.rs  writer.rs
battle_gui/src/server/: mod.rs
battle_gui/src/ui/: action.rs  color.rs  health.rs  menu.rs  mod.rs
battle_gui/src/ui/component/: background.rs  button.rs  mod.rs
battle_gui/src/ui/hud/: background.rs  battle.rs  builder.rs  button.rs  detail.rs  event.rs  minimap.rs  mod.rs  morale.rs  painter.rs  squad.rs
battle_gui/src/utils/: mod.rs  qualified.rs
battle_server/: Cargo.toml
battle_server/src/: bin.rs  lib.rs
battle_server/src/game/: squad.rs
battle_server/src/runner/: engage.rs  flag.rs  input.rs  message.rs  mod.rs  morale.rs  movement.rs  output.rs  phase.rs  react.rs  soldier.rs  tick.rs  update.rs  utils.rs  vehicle.rs  victory.rs  visibility.rs  worker.rs
battle_server/src/runner/behavior/: blast.rs  bullet.rs  death.rs  defend.rs  engage.rs  mod.rs  moves.rs  suppress.rs
battle_server/src/runner/fight/: choose.rs  mod.rs
battle_server/src/runner/gesture/: engage.rs  fire.rs  idle.rs  mod.rs  soldier.rs  suppress.rs  weapon.rs
battle_server/src/runner/physics/: bullet.rs  explosion.rs  mod.rs
battle_server/src/runner/soldier/: engage.rs  fight.rs  mod.rs
battle_server/src/runner/soldier/behavior/: defend.rs  engage.rs  mod.rs  moves.rs  suppress.rs
battle_server/src/runner/soldier/gesture/: engage.rs  fire.rs  idle.rs  mod.rs  soldier.rs  suppress.rs  weapon.rs
battle_tools/: Cargo.toml
battle_tools/src/: hardcode.rs  lib.rs
doc/: index.md
doc/player/: index.md
examples/: Cargo.toml
examples/src/: lib.rs  runner.rs
examples/src/deployment/: soldier.rs
examples/src/map/: flat.rs  generator.rs  mod.rs
examples/src/scenarios/: face_to_face.rs  mod.rs
maps/001/: 001.tmx  state1.xml
maps/003/: terrain.tsx
oc_core/: Cargo.toml
oc_core/src/: health.rs  lib.rs  morale.rs  resources.rs  spawn.rs
oc_launcher/: Cargo.toml
oc_launcher/src/: main.rs  run.rs
opencc/: const.py  user_action.py
opencc/gui/: base.py  fire.py  move.py
opencc/simulation/: base.py  behaviour.py  event.py  interior.py  mechanism.py  physics.py  subject.py  tmx.py
opencc/terminal/: base.py
opencombat/: const.py  exception.py  gui.py  state.py  state.xsd  state_template.xml  user_action.py  util.py  xml.py
opencombat/ai/: placement.py
opencombat/game/: actor.py  animation.py  base.py  const.py  fire.py  image.py  move.py  placement.py  weapon.py
opencombat/gui/: actor.py  base.py  const.py  fire.py  image.py  move.py  state.py  weapon.py
opencombat/simulation/: base.py  behaviour.py  event.py  fire.py  interior.py  mechanism.py  move.py  physics.py  placement.py  state.py  subject.py  tmx.py
opencombat/strategy/: manager.py  teams.xml  teams.xsd  troops.py  troops.xsd  troops_template.xml  units.xml  units.xsd
opencombat/terminal/: base.py
resources/: cannon_blasts.xcf  explosions.xcf  flags.xcf  map1.tmx  soldiers.xcf  sprite_sheet.xcf  sprites.xcf  terrain.xcf  ui.tsx  ui.xcf  vehicles.xcf  weapon_riffle.xcf
src/: config.rs  debug.rs  hardcode.rs  main.rs  types.rs  util.rs  utils.rs
src/audio/: mod.rs  player.rs
src/behavior/: animate.rs  defend.rs  engagement.rs  feeling.rs  gesture.rs  mod.rs  move_.rs  movement.rs  order.rs  standing.rs  util.rs  walking.rs
src/engine/: animate.rs  behavior.rs  client.rs  debug.rs  draw.rs  entity.rs  feeling.rs  input.rs  interior.rs  (+16 more)
tests/: conftest.py  test_state.py
tools/: package_release_linux.sh  package_release_windows.sh
(+151 files in other folders)
