[package]
name = "opencombat"
version = "0.1.1"
authors = ["Sevajol Bastien <contact@bux.fr>"]
edition = "2021"

[dependencies]
rayon = "1"
ggez = { url = "https://github.com/ggez/ggez.git", revision = "f87f078346729737b4691b9618eab3f95d61c8ad" }
glam = { version = "0.22.0", features = ["mint"]}
rand = "0.8.5"
structopt = "0.3.21"
crossbeam-channel = "0.5"
zmq = "0.9"
bincode = "1.3.3"
serde = "1.0.136"
tiled = "0.10.2"
pathfinding = "4.2.1"
keyframe = "1.0.4"
keyframe_derive = "1.0.0"
bresenham = "0.1.1"
strum = "0.24"
strum_macros = "0.24"
geo = "0.23.1"
ggez-egui = "0.3.1"
