[package]
name = "opencombat"
version = "0.1.1"
authors = ["Sevajol Bastien <contact@bux.fr>"]
edition = "2021"

[dependencies]
rayon = "1"
ggez = { git = "https://github.com/ggez/ggez.git", rev = "81544de231c1f9dcce530a2b0aa09d4b1f423ed7" }
glam = { version = "0.22.0", features = ["mint"]}
rand = "0.8.5"
structopt = "0.3.21"
crossbeam-channel = "0.5"
zmq = "0.9"
bincode = "1.3.3"
serde = "1.0.136"
tiled = "0.10.2"
pathfinding = "4.2.1"
keyframe = "1.0.4"
keyframe_derive = "1.0.0"
bresenham = "0.1.1"
strum = "0.24"
strum_macros = "0.24"
geo = "0.23.1"
# ggegui = { git = "https://github.com/buxx/ggegui.git", rev = "8bf9bc69215699ee1663ccb4415550bc5820c983" }
# ggegui = { path = "../ggegui" }
