[package]
name = "battle_core"
version = "0.4.0"
authors = ["Sevajol Bastien <contact@bux.fr>"]
edition = "2021"

[dependencies]
oc_core = { path = "../oc_core" }
tiled = "0.10.2"
serde = { version = "1", features = ["derive"] }
pathfinding = "4.2.1"
glam = { version = "0.22.0", features = ["mint"]}
strum = "0.24"
strum_macros = "0.24"
geo = "0.27.0"
bresenham = "0.1.1"
rand = "0.8.5"
crossbeam-channel = "0.5.6"
zmq = "0.9"
bincode = "1.3.3"
serde_json = "1.0.96"
thiserror = "1.0.39"
rstest = "0.18.1"
