[package]
name = "battle_gui"
version = "0.4.0"
authors = ["Sevajol Bastien <contact@bux.fr>"]
edition = "2021"

[features]
default = ["hd"]
hd = []

[dependencies]
oc_core = { path = "../oc_core" }
battle_core = { path = "../battle_core" }
battle_server = { path = "../battle_server" }
rayon = "1"
ggez = "0.9.3"
glam = { version = "0.22.0", features = ["mint"]}
rand = "0.8.5"
structopt = "0.3.21"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
keyframe = "1.0.4"
keyframe_derive = "1.0.0"
strum = "0.24"
strum_macros = "0.24"
geo = "0.27.0"
ggegui = "0.3.7"
puffin_http = "0.16.0"
puffin = "0.19.0"
image = "0.24.5"
anyhow = "1.0.69"
thiserror = "1.0.39"
bincode = "1.3.3"
humantime = "2.1.0"
serde_json = "1.0.96"
