[package]
name = "examples"
version = "0.1.0"
authors = ["Sevajol Bastien <contact@bux.fr>"]
edition = "2021"

[dependencies]
oc_core = { path = "../oc_core" }
battle_core = { path = "../battle_core" }
battle_server = { path = "../battle_server" }
battle_tools = { path = "../battle_tools" }
battle_gui = { path = "../battle_gui" }
